--- a/style.css
+++ b/style.css
@@ -1,7 +1,43 @@
-html, body {
-  margin: 0;
+* {
+  width: auto;
+  margin: auto;
   padding: 0;
+  line-height: 1.5;
+  text-align: center;
+
 }
 canvas {
   display: block;
+  margin: auto;
+}
+
+
+h1 {
+  font-size: 72px;
+  padding: 20px;
+}
+h2 {
+  font-size: 18px;
+  padding: 10px;
+}
+h3 {
+  font-size: 32px;
+}
+
+p {
+  font-size: 18px;
+  padding: 15px;
+}
+
+/* 링크 */
+a {
+  font-weight: bold;
+  padding: 25px;
+  color: #ed1f5e;
+}
+
+img {
+  width: 45px;
+  height: 45px;
+  padding: 0px;
 }
